parser/ContentModelParser.js
ctypeParser = (function(){
  /*
   * Generated by PEG.js 0.7.0.
   *
   * http://pegjs.majda.cz/
   */
  
  function quote(s) {
    /*
     * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
     * string literal except for the closing quote character, backslash,
     * carriage return, line separator, paragraph separator, and line feed.
     * Any character may appear in the form of an escape sequence.
     *
     * For portability, we also escape escape all control and non-ASCII
     * characters. Note that "\0" and "\v" escape sequences are not used
     * because JSHint does not like the first and IE the second.
     */
     return '"' + s
      .replace(/\\/g, '\\\\')  // backslash
      .replace(/"/g, '\\"')    // closing quote character
      .replace(/\x08/g, '\\b') // backspace
      .replace(/\t/g, '\\t')   // horizontal tab
      .replace(/\n/g, '\\n')   // line feed
      .replace(/\f/g, '\\f')   // form feed
      .replace(/\r/g, '\\r')   // carriage return
      .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
      + '"';
  }
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "start": parse_start,
        "content_model": parse_content_model,
        "content_type": parse_content_type,
        "property": parse_property,
        "attribute": parse_attribute,
        "relationship": parse_relationship,
        "data_type": parse_data_type,
        "macro_def": parse_macro_def,
        "macro_instance": parse_macro_instance,
        "PRIVACY": parse_PRIVACY,
        "DESCRIPTION": parse_DESCRIPTION,
        "EQUALITY": parse_EQUALITY,
        "NESTED_DATA_TYPE": parse_NESTED_DATA_TYPE,
        "RBO": parse_RBO,
        "RBC": parse_RBC,
        "VERB_PHRASE": parse_VERB_PHRASE,
        "CTYPE_REF": parse_CTYPE_REF,
        "MACRO_REF": parse_MACRO_REF,
        "REQUIRED": parse_REQUIRED,
        "SEPARATOR": parse_SEPARATOR,
        "IDENT": parse_IDENT,
        "HYPHENATED_WORD": parse_HYPHENATED_WORD,
        "WORD": parse_WORD,
        "INDENT": parse_INDENT,
        "SP": parse_SP,
        "NL": parse_NL,
        "_A": parse__A,
        "_B": parse__B,
        "_C": parse__C,
        "_D": parse__D,
        "_E": parse__E,
        "_F": parse__F,
        "_G": parse__G,
        "_H": parse__H,
        "_I": parse__I,
        "_J": parse__J,
        "_K": parse__K,
        "_L": parse__L,
        "_M": parse__M,
        "_N": parse__N,
        "_O": parse__O,
        "_P": parse__P,
        "_Q": parse__Q,
        "_R": parse__R,
        "_S": parse__S,
        "_T": parse__T,
        "_U": parse__U,
        "_V": parse__V,
        "_W": parse__W,
        "_X": parse__X,
        "_Y": parse__Y,
        "_Z": parse__Z
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "start";
      }
      
      var pos = { offset: 0, line: 1, column: 1, seenCR: false };
      var reportFailures = 0;
      var rightmostFailuresPos = { offset: 0, line: 1, column: 1, seenCR: false };
      var rightmostFailuresExpected = [];
      var cache = {};
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        var escapeChar;
        var length;
        
        if (charCode <= 0xFF) {
          escapeChar = 'x';
          length = 2;
        } else {
          escapeChar = 'u';
          length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function clone(object) {
        var result = {};
        for (var key in object) {
          result[key] = object[key];
        }
        return result;
      }
      
      function advance(pos, n) {
        var endOffset = pos.offset + n;
        
        for (var offset = pos.offset; offset < endOffset; offset++) {
          var ch = input.charAt(offset);
          if (ch === "\n") {
            if (!pos.seenCR) { pos.line++; }
            pos.column = 1;
            pos.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            pos.line++;
            pos.column = 1;
            pos.seenCR = true;
          } else {
            pos.column++;
            pos.seenCR = false;
          }
        }
        
        pos.offset += n;
      }
      
      function matchFailed(failure) {
        if (pos.offset < rightmostFailuresPos.offset) {
          return;
        }
        
        if (pos.offset > rightmostFailuresPos.offset) {
          rightmostFailuresPos = clone(pos);
          rightmostFailuresExpected = [];
        }
        
        rightmostFailuresExpected.push(failure);
      }
      
      function parse_start() {
        var cacheKey = "start@" + pos.offset;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = clone(cachedResult.nextPos);
          return cachedResult.result;
        }
        
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = [];
        result1 = parse_NL();
        if (result1 === null) {
          result1 = parse_SP();
        }
        while (result1 !== null) {
          result0.push(result1);
          result1 = parse_NL();
          if (result1 === null) {
            result1 = parse_SP();
          }
        }
        if (result0 !== null) {
          result1 = parse_content_model();
          if (result1 !== null) {
            result2 = [];
            result3 = parse_NL();
            if (result3 === null) {
              result3 = parse_SP();
            }
            while (result3 !== null) {
              result2.push(result3);
              result3 = parse_NL();
              if (result3 === null) {
                result3 = parse_SP();
              }
            }
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, cm) { return cm })(pos0.offset, pos0.line, pos0.column, result0[1]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        
        cache[cacheKey] = {
          nextPos: clone(pos),
          result:  result0
        };
        return result0;
      }
      
      function parse_content_model() {
        var cacheKey = "content_model@" + pos.offset;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = clone(cachedResult.nextPos);
          return cachedResult.result;
        }
        
        var result0, result1, result2;
        var pos0, pos1;
        
        reportFailures++;
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = [];
        result1 = parse_macro_def();
        while (result1 !== null) {
          result0.push(result1);
          result1 = parse_macro_def();
        }
        result0 = result0 !== null ? result0 : "";
        if (result0 !== null) {
          result2 = parse_content_type();
          if (result2 !== null) {
            result1 = [];
            while (result2 !== null) {
              result1.push(result2);
              result2 = parse_content_type();
            }
          } else {
            result1 = null;
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, m, c) { return { "contentTypes":c } })(pos0.offset, pos0.line, pos0.column, result0[0], result0[1]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        reportFailures--;
        if (reportFailures === 0 && result0 === null) {
          matchFailed("Content Model");
        }
        
        cache[cacheKey] = {
          nextPos: clone(pos),
          result:  result0
        };
        return result0;
      }
      
      function parse_content_type() {
        var cacheKey = "content_type@" + pos.offset;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = clone(cachedResult.nextPos);
          return cachedResult.result;
        }
        
        var result0, result1, result2, result3, result4, result5, result6, result7;
        var pos0, pos1;
        
        reportFailures++;
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_IDENT();
        if (result0 !== null) {
          result1 = [];
          result2 = parse_SP();
          while (result2 !== null) {
            result1.push(result2);
            result2 = parse_SP();
          }
          if (result1 !== null) {
            result2 = parse_DESCRIPTION();
            result2 = result2 !== null ? result2 : "";
            if (result2 !== null) {
              result3 = [];
              result4 = parse_SP();
              while (result4 !== null) {
                result3.push(result4);
                result4 = parse_SP();
              }
              if (result3 !== null) {
                result4 = parse_NL();
                if (result4 !== null) {
                  result6 = parse_property();
                  if (result6 !== null) {
                    result5 = [];
                    while (result6 !== null) {
                      result5.push(result6);
                      result6 = parse_property();
                    }
                  } else {
                    result5 = null;
                  }
                  if (result5 !== null) {
                    result6 = [];
                    result7 = parse_NL();
                    while (result7 !== null) {
                      result6.push(result7);
                      result7 = parse_NL();
                    }
                    if (result6 !== null) {
                      result0 = [result0, result1, result2, result3, result4, result5, result6];
                    } else {
                      result0 = null;
                      pos = clone(pos1);
                    }
                  } else {
                    result0 = null;
                    pos = clone(pos1);
                  }
                } else {
                  result0 = null;
                  pos = clone(pos1);
                }
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, i, d, p) { return { "contentType":i, "description":d, "properties":([].concat.apply([],p)) } })(pos0.offset, pos0.line, pos0.column, result0[0], result0[2], result0[5]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        reportFailures--;
        if (reportFailures === 0 && result0 === null) {
          matchFailed("Content Type");
        }
        
        cache[cacheKey] = {
          nextPos: clone(pos),
          result:  result0
        };
        return result0;
      }
      
      function parse_property() {
        var cacheKey = "property@" + pos.offset;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = clone(cachedResult.nextPos);
          return cachedResult.result;
        }
        
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        reportFailures++;
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_INDENT();
        if (result0 !== null) {
          result1 = parse_attribute();
          if (result1 === null) {
            result1 = parse_relationship();
          }
          if (result1 !== null) {
            result2 = [];
            result3 = parse_NL();
            while (result3 !== null) {
              result2.push(result3);
              result3 = parse_NL();
            }
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, p) { return p })(pos0.offset, pos0.line, pos0.column, result0[1]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        if (result0 === null) {
          pos0 = clone(pos);
          pos1 = clone(pos);
          result0 = parse_INDENT();
          if (result0 !== null) {
            result1 = parse_macro_instance();
            if (result1 !== null) {
              result2 = [];
              result3 = parse_NL();
              while (result3 !== null) {
                result2.push(result3);
                result3 = parse_NL();
              }
              if (result2 !== null) {
                result0 = [result0, result1, result2];
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
          if (result0 !== null) {
            result0 = (function(offset, line, column, p) { return p })(pos0.offset, pos0.line, pos0.column, result0[1]);
          }
          if (result0 === null) {
            pos = clone(pos0);
          }
        }
        reportFailures--;
        if (reportFailures === 0 && result0 === null) {
          matchFailed("Property");
        }
        
        cache[cacheKey] = {
          nextPos: clone(pos),
          result:  result0
        };
        return result0;
      }
      
      function parse_attribute() {
        var cacheKey = "attribute@" + pos.offset;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = clone(cachedResult.nextPos);
          return cachedResult.result;
        }
        
        var result0, result1, result2, result3, result4, result5, result6, result7, result8;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_PRIVACY();
        result0 = result0 !== null ? result0 : "";
        if (result0 !== null) {
          result1 = parse_IDENT();
          if (result1 !== null) {
            result2 = parse_REQUIRED();
            result2 = result2 !== null ? result2 : "";
            if (result2 !== null) {
              result3 = parse_SEPARATOR();
              if (result3 !== null) {
                result4 = parse_data_type();
                if (result4 === null) {
                  result4 = parse_macro_instance();
                }
                if (result4 !== null) {
                  result5 = [];
                  result6 = parse_SP();
                  while (result6 !== null) {
                    result5.push(result6);
                    result6 = parse_SP();
                  }
                  if (result5 !== null) {
                    result6 = parse_DESCRIPTION();
                    result6 = result6 !== null ? result6 : "";
                    if (result6 !== null) {
                      result7 = [];
                      result8 = parse_SP();
                      while (result8 !== null) {
                        result7.push(result8);
                        result8 = parse_SP();
                      }
                      if (result7 !== null) {
                        result0 = [result0, result1, result2, result3, result4, result5, result6, result7];
                      } else {
                        result0 = null;
                        pos = clone(pos1);
                      }
                    } else {
                      result0 = null;
                      pos = clone(pos1);
                    }
                  } else {
                    result0 = null;
                    pos = clone(pos1);
                  }
                } else {
                  result0 = null;
                  pos = clone(pos1);
                }
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, p, i, r, v, d) { return { "attr":i, "required":(r.length>0), "value":(v.unit ? v : v[0]), "privacy":(p=="" ? "visible" : p), "description":d } })(pos0.offset, pos0.line, pos0.column, result0[0], result0[1], result0[2], result0[4], result0[6]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        if (result0 === null) {
          pos0 = clone(pos);
          pos1 = clone(pos);
          result0 = parse_PRIVACY();
          result0 = result0 !== null ? result0 : "";
          if (result0 !== null) {
            result1 = parse_IDENT();
            if (result1 !== null) {
              result2 = parse_REQUIRED();
              result2 = result2 !== null ? result2 : "";
              if (result2 !== null) {
                result0 = [result0, result1, result2];
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
          if (result0 !== null) {
            result0 = (function(offset, line, column, p, i, r) { return { "attr" : i, "required" : (r.length>0), "privacy":(p=="" ? "visible" : p) } })(pos0.offset, pos0.line, pos0.column, result0[0], result0[1], result0[2]);
          }
          if (result0 === null) {
            pos = clone(pos0);
          }
        }
        
        cache[cacheKey] = {
          nextPos: clone(pos),
          result:  result0
        };
        return result0;
      }
      
      function parse_relationship() {
        var cacheKey = "relationship@" + pos.offset;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = clone(cachedResult.nextPos);
          return cachedResult.result;
        }
        
        var result0, result1, result2, result3, result4, result5, result6;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_VERB_PHRASE();
        if (result0 !== null) {
          result1 = parse_SEPARATOR();
          if (result1 !== null) {
            result2 = parse_CTYPE_REF();
            if (result2 !== null) {
              result3 = [];
              result4 = parse_SP();
              while (result4 !== null) {
                result3.push(result4);
                result4 = parse_SP();
              }
              if (result3 !== null) {
                result4 = parse_DESCRIPTION();
                result4 = result4 !== null ? result4 : "";
                if (result4 !== null) {
                  result5 = [];
                  result6 = parse_SP();
                  while (result6 !== null) {
                    result5.push(result6);
                    result6 = parse_SP();
                  }
                  if (result5 !== null) {
                    result0 = [result0, result1, result2, result3, result4, result5];
                  } else {
                    result0 = null;
                    pos = clone(pos1);
                  }
                } else {
                  result0 = null;
                  pos = clone(pos1);
                }
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, r, c, d) { return { "relationship":r, "contentType": c, "description":d } })(pos0.offset, pos0.line, pos0.column, result0[0], result0[2], result0[4]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        
        cache[cacheKey] = {
          nextPos: clone(pos),
          result:  result0
        };
        return result0;
      }
      
      function parse_data_type() {
        var cacheKey = "data_type@" + pos.offset;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = clone(cachedResult.nextPos);
          return cachedResult.result;
        }
        
        var result0, result1, result2, result3, result4, result5, result6;
        var pos0, pos1;
        
        reportFailures++;
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_EQUALITY();
        result0 = result0 !== null ? result0 : "";
        if (result0 !== null) {
          result1 = [];
          result2 = parse_SP();
          while (result2 !== null) {
            result1.push(result2);
            result2 = parse_SP();
          }
          if (result1 !== null) {
            if (/^[0-9]/.test(input.charAt(pos.offset))) {
              result3 = input.charAt(pos.offset);
              advance(pos, 1);
            } else {
              result3 = null;
              if (reportFailures === 0) {
                matchFailed("[0-9]");
              }
            }
            if (result3 !== null) {
              result2 = [];
              while (result3 !== null) {
                result2.push(result3);
                if (/^[0-9]/.test(input.charAt(pos.offset))) {
                  result3 = input.charAt(pos.offset);
                  advance(pos, 1);
                } else {
                  result3 = null;
                  if (reportFailures === 0) {
                    matchFailed("[0-9]");
                  }
                }
              }
            } else {
              result2 = null;
            }
            if (result2 !== null) {
              result3 = [];
              result4 = parse_SP();
              while (result4 !== null) {
                result3.push(result4);
                result4 = parse_SP();
              }
              if (result3 !== null) {
                result4 = parse_NESTED_DATA_TYPE();
                if (result4 === null) {
                  result4 = parse_CTYPE_REF();
                }
                if (result4 !== null) {
                  result5 = [];
                  result6 = parse_SP();
                  while (result6 !== null) {
                    result5.push(result6);
                    result6 = parse_SP();
                  }
                  if (result5 !== null) {
                    result0 = [result0, result1, result2, result3, result4, result5];
                  } else {
                    result0 = null;
                    pos = clone(pos1);
                  }
                } else {
                  result0 = null;
                  pos = clone(pos1);
                }
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, e, q, u) { return { "quantity":q.join(""), "unit":u, "equality" : e || "lte" } })(pos0.offset, pos0.line, pos0.column, result0[0], result0[2], result0[4]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        if (result0 === null) {
          pos0 = clone(pos);
          pos1 = clone(pos);
          result0 = parse_NESTED_DATA_TYPE();
          if (result0 === null) {
            result0 = parse_CTYPE_REF();
          }
          if (result0 !== null) {
            result1 = [];
            result2 = parse_SP();
            while (result2 !== null) {
              result1.push(result2);
              result2 = parse_SP();
            }
            if (result1 !== null) {
              result0 = [result0, result1];
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
          if (result0 !== null) {
            result0 = (function(offset, line, column, i) { return { "unit" : i } })(pos0.offset, pos0.line, pos0.column, result0[0]);
          }
          if (result0 === null) {
            pos = clone(pos0);
          }
        }
        reportFailures--;
        if (reportFailures === 0 && result0 === null) {
          matchFailed("Data Type");
        }
        
        cache[cacheKey] = {
          nextPos: clone(pos),
          result:  result0
        };
        return result0;
      }
      
      function parse_macro_def() {
        var cacheKey = "macro_def@" + pos.offset;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = clone(cachedResult.nextPos);
          return cachedResult.result;
        }
        
        var result0, result1, result2, result3, result4, result5, result6, result7;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_MACRO_REF();
        if (result0 !== null) {
          result1 = parse_SEPARATOR();
          if (result1 !== null) {
            result2 = parse_data_type();
            if (result2 !== null) {
              result3 = [];
              result4 = parse_SP();
              while (result4 !== null) {
                result3.push(result4);
                result4 = parse_SP();
              }
              if (result3 !== null) {
                result4 = parse_DESCRIPTION();
                result4 = result4 !== null ? result4 : "";
                if (result4 !== null) {
                  result5 = [];
                  result6 = parse_SP();
                  while (result6 !== null) {
                    result5.push(result6);
                    result6 = parse_SP();
                  }
                  if (result5 !== null) {
                    result6 = [];
                    result7 = parse_NL();
                    while (result7 !== null) {
                      result6.push(result7);
                      result7 = parse_NL();
                    }
                    if (result6 !== null) {
                      result0 = [result0, result1, result2, result3, result4, result5, result6];
                    } else {
                      result0 = null;
                      pos = clone(pos1);
                    }
                  } else {
                    result0 = null;
                    pos = clone(pos1);
                  }
                } else {
                  result0 = null;
                  pos = clone(pos1);
                }
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, m, d) { macros[m] = [d] ; return /*ignore description*/})(pos0.offset, pos0.line, pos0.column, result0[0], result0[2]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        if (result0 === null) {
          pos0 = clone(pos);
          pos1 = clone(pos);
          result0 = parse_MACRO_REF();
          if (result0 !== null) {
            result1 = [];
            result2 = parse_SP();
            while (result2 !== null) {
              result1.push(result2);
              result2 = parse_SP();
            }
            if (result1 !== null) {
              result2 = parse_DESCRIPTION();
              result2 = result2 !== null ? result2 : "";
              if (result2 !== null) {
                result3 = [];
                result4 = parse_SP();
                while (result4 !== null) {
                  result3.push(result4);
                  result4 = parse_SP();
                }
                if (result3 !== null) {
                  result4 = parse_NL();
                  if (result4 !== null) {
                    result6 = parse_property();
                    if (result6 !== null) {
                      result5 = [];
                      while (result6 !== null) {
                        result5.push(result6);
                        result6 = parse_property();
                      }
                    } else {
                      result5 = null;
                    }
                    if (result5 !== null) {
                      result6 = [];
                      result7 = parse_NL();
                      while (result7 !== null) {
                        result6.push(result7);
                        result7 = parse_NL();
                      }
                      if (result6 !== null) {
                        result0 = [result0, result1, result2, result3, result4, result5, result6];
                      } else {
                        result0 = null;
                        pos = clone(pos1);
                      }
                    } else {
                      result0 = null;
                      pos = clone(pos1);
                    }
                  } else {
                    result0 = null;
                    pos = clone(pos1);
                  }
                } else {
                  result0 = null;
                  pos = clone(pos1);
                }
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
          if (result0 !== null) {
            result0 = (function(offset, line, column, m, p) { macros[m] = p; return })(pos0.offset, pos0.line, pos0.column, result0[0], result0[5]);
          }
          if (result0 === null) {
            pos = clone(pos0);
          }
        }
        
        cache[cacheKey] = {
          nextPos: clone(pos),
          result:  result0
        };
        return result0;
      }
      
      function parse_macro_instance() {
        var cacheKey = "macro_instance@" + pos.offset;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = clone(cachedResult.nextPos);
          return cachedResult.result;
        }
        
        var result0, result1, result2;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_MACRO_REF();
        if (result0 !== null) {
          result1 = [];
          result2 = parse_SP();
          while (result2 !== null) {
            result1.push(result2);
            result2 = parse_SP();
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, m) { if (m) {
             var r = [];
             r = r.concat.apply(r, macros[m]);
             return r;
           } else {
             return { "error" : "Macro '"+m+"' not defined." }
           } })(pos0.offset, pos0.line, pos0.column, result0[0]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        
        cache[cacheKey] = {
          nextPos: clone(pos),
          result:  result0
        };
        return result0;
      }
      
      function parse_PRIVACY() {
        var cacheKey = "PRIVACY@" + pos.offset;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = clone(cachedResult.nextPos);
          return cachedResult.result;
        }
        
        var result0;
        var pos0;
        
        reportFailures++;
        pos0 = clone(pos);
        if (input.charCodeAt(pos.offset) === 63) {
          result0 = "?";
          advance(pos, 1);
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"?\"");
          }
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column) { return "optional" })(pos0.offset, pos0.line, pos0.column);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        if (result0 === null) {
          pos0 = clone(pos);
          if (input.charCodeAt(pos.offset) === 45) {
            result0 = "-";
            advance(pos, 1);
          } else {
            result0 = null;
            if (reportFailures === 0) {
              matchFailed("\"-\"");
            }
          }
          if (result0 !== null) {
            result0 = (function(offset, line, column) { return "hidden" })(pos0.offset, pos0.line, pos0.column);
          }
          if (result0 === null) {
            pos = clone(pos0);
          }
        }
        reportFailures--;
        if (reportFailures === 0 && result0 === null) {
          matchFailed("Describes if the value is able to be displayed in the UI.");
        }
        
        cache[cacheKey] = {
          nextPos: clone(pos),
          result:  result0
        };
        return result0;
      }
      
      function parse_DESCRIPTION() {
        var cacheKey = "DESCRIPTION@" + pos.offset;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = clone(cachedResult.nextPos);
          return cachedResult.result;
        }
        
        var result0, result1, result2;
        var pos0, pos1;
        
        reportFailures++;
        pos0 = clone(pos);
        pos1 = clone(pos);
        if (input.charCodeAt(pos.offset) === 34) {
          result0 = "\"";
          advance(pos, 1);
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"\\\"\"");
          }
        }
        if (result0 !== null) {
          result1 = [];
          if (/^[^"]/i.test(input.charAt(pos.offset))) {
            result2 = input.charAt(pos.offset);
            advance(pos, 1);
          } else {
            result2 = null;
            if (reportFailures === 0) {
              matchFailed("[^\"]i");
            }
          }
          while (result2 !== null) {
            result1.push(result2);
            if (/^[^"]/i.test(input.charAt(pos.offset))) {
              result2 = input.charAt(pos.offset);
              advance(pos, 1);
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("[^\"]i");
              }
            }
          }
          if (result1 !== null) {
            if (input.charCodeAt(pos.offset) === 34) {
              result2 = "\"";
              advance(pos, 1);
            } else {
